--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@ django-cors-headers==4.6.0
 django-countries==7.6.1
 django-environ==0.12.0
 django-phonenumber-field==8.0.0
+django-rest-auth==0.9.5
 djangorestframework==3.15.2
+djangorestframework-bulk==0.2.1
+mypy-extensions==1.0.0
 mysqlclient==2.2.7
 phonenumbers==8.13.54
 psycopg2==2.9.10
+setuptools==75.8.0
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
